--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,12 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  flutter_login: ^1.0.14
   flutter:
     sdk: flutter
-  firebase_core: ^0.5.0
-  cloud_firestore: 0.14.3+1
+  firebase_core: ^0.7.0
+  cloud_firestore: "^0.16.0"
+  firebase_auth: "^0.20.0"
   date_field: ^0.3.3
   intl:
 
@@ -42,6 +44,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+    - assets/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -49,8 +53,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
